Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83408

Text disappears with ElideRight.

XMLWordPrintable

    • 127c79fb7fda16b9a48ce8c425d1700d1aa7502d (qt/qtdeclarative/dev) 2fee8f1f310406af41fd104892be012d4e633b94 (qt/qtdeclarative/6.0) c24757f1b642102852beb1f62c83bfd76ca31567 (qt/tqtc-qtdeclarative/tqtc/lts-5.15), 235bbe8c6 (dev), 892576b74 (6.7)

      User has found a bug related to Text elide: Text.ElideRight.

      Test project attached.

      In the test text should remain visible after width and height changes in it but it disappears.

        1. TextElideTest_AnchorsMargins.zip
          2 kB
          buggex
        2. TextElideTest.zip
          5 kB
          Tero Pelkonen
        For Gerrit Dashboard: QTBUG-83408
        # Subject Branch Project Status CR V

            ivan.solovev Ivan Solovev
            tero.pelkonen Tero Pelkonen
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: